Added login service to backend and discord service draft
